deploy/kubernetes/project-hub-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-hub
  labels:
    ref: project-hub
