deploy/kubernetes/project-hub-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: project-hub
  labels:
    ref: project-hub
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: project-hub
  labels:
    app: backend
    ref: project-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      ref: project-hub
  template:
    metadata:
      labels:
        app: backend
        ref: project-hub
    spec:
      containers:
      - name: backend
        image: registry.code.fbi.h-da.de/project-hub/project-hub/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /api
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
