deploy/kubernetes/project-hub-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: project-hub
  labels:
    ref: project-hub
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: project-hub
  labels:
    ref: project-hub
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        ref: project-hub
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
      #   volumeMounts:
      #   - name: k8s-mysql-storage
      #     mountPath: /var/lib/mysql
      # volumes:
      # - name: k8s-mysql-storage
      #   emptyDir: {}
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
