deploy/kubernetes/project-hub-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project-hub
  labels:
    ref: project-hub
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: frontend
  ports:
    - name: http-metrics
      port: 8000
      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: project-hub
  labels:
    app: frontend
    ref: project-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        ref: project-hub
    spec:
      containers:
      - name: frontend
        image: registry.code.fbi.h-da.de/project-hub/project-hub/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
