deploy/kubernetes/project-hub-notes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notes
  namespace: project-hub
  labels:
    ref: project-hub
spec:
  selector:
    app: notes
  ports:
    - name: http
      port: 80
      targetPort: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
  namespace: project-hub
  labels:
    app: notes
    ref: project-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
        ref: project-hub
    spec:
      containers:
      - name: notes
        image: registry.code.fbi.h-da.de/project-hub/project-hub/notes:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
