deploy/kubernetes/project-hub-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-main
  namespace: project-hub
  labels:
    ref: project-hub
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: project-hub.studio
    http:
      paths:
      - pathType: Prefix
        path: /.*
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: backend
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-notes
  namespace: project-hub
  labels:
    ref: project-hub
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
   - host: notes.project-hub.studio
     http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: notes
            port:
              number: 80
